[package]
name = "reqs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
axum = { version = "0.6.20", features = ["macros"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_with = "3.4.0"
serde_yaml = "0.9.27"
smart-default = "0.7.1"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = { version = "2.5.0", features = ["serde"] }
